// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownSelector/MenuList Basic smoke-test 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  list-style: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  cursor: pointer;
  outline: none;
  padding-right: 16px;
  padding-left: 16px;
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c2:hover,
.c2:focus,
.c2:focus-within {
  background-color: var(--charcoal-surface3);
}

<div data-dark="false">
  <ul class="c0">
    <li role="option"
        class="c1"
    >
      <div value="0"
           data-key="0"
           tabindex="-1"
           class="c2"
      >
        Menu 0
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="1"
           data-key="1"
           tabindex="-1"
           class="c2"
      >
        Menu 1
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="2"
           data-key="2"
           tabindex="-1"
           class="c2"
      >
        Menu 2
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="3"
           data-key="3"
           tabindex="-1"
           class="c2"
      >
        Menu 3
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="4"
           data-key="4"
           tabindex="-1"
           class="c2"
      >
        Menu 4
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="5"
           data-key="5"
           tabindex="-1"
           class="c2"
      >
        Menu 5
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="6"
           data-key="6"
           tabindex="-1"
           class="c2"
      >
        Menu 6
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="7"
           data-key="7"
           tabindex="-1"
           class="c2"
      >
        Menu 7
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="8"
           data-key="8"
           tabindex="-1"
           class="c2"
      >
        Menu 8
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="9"
           data-key="9"
           tabindex="-1"
           class="c2"
      >
        Menu 9
      </div>
    </li>
  </ul>
</div>
`;

exports[`DropdownSelector/MenuList Disabled smoke-test 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c1 {
  list-style: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  cursor: pointer;
  outline: none;
  padding-right: 16px;
  padding-left: 16px;
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c2:hover,
.c2:focus,
.c2:focus-within {
  background-color: var(--charcoal-surface3);
}

<div data-dark="false">
  <ul class="c0">
    <li role="option"
        class="c1"
    >
      <div value="1"
           data-key="1"
           tabindex="-1"
           class="c2"
      >
        MenuItem
      </div>
    </li>
    <li role="option"
        class="c1"
    >
      <div value="2"
           disabled
           data-key="2"
           tabindex="-1"
           aria-disabled="true"
           class="c2"
      >
        Disabled MenuItem
      </div>
    </li>
  </ul>
</div>
`;

exports[`DropdownSelector/MenuList Group smoke-test 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

.c4 {
  list-style: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  cursor: pointer;
  outline: none;
  padding-right: 16px;
  padding-left: 16px;
}

.c5:disabled,
.c5[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c5:hover,
.c5:focus,
.c5:focus-within {
  background-color: var(--charcoal-surface3);
}

.c2 {
  display: block;
  color: var(--charcoal-text3);
  font-size: 12px;
  font-weight: bold;
  padding: 12px 0 8px 16px;
}

.c3 {
  padding-left: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  overflow: hidden;
}

.c1 {
  display: block;
}

<div data-dark="false">
  <ul class="c0">
    <li role="presentation"
        class="c1"
    >
      <span class="c2">
        Section1
      </span>
      <ul role="group"
          class="c3"
      >
        <li role="option"
            class="c4"
        >
          <div value="0"
               data-key="0"
               tabindex="-1"
               class="c5"
          >
            Menu 0
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="1"
               data-key="1"
               tabindex="-1"
               class="c5"
          >
            Menu 1
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="2"
               data-key="2"
               tabindex="-1"
               class="c5"
          >
            Menu 2
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="3"
               data-key="3"
               tabindex="-1"
               class="c5"
          >
            Menu 3
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="4"
               data-key="4"
               tabindex="-1"
               class="c5"
          >
            Menu 4
          </div>
        </li>
      </ul>
    </li>
    <li role="presentation"
        class="c1"
    >
      <span class="c2">
        Section2
      </span>
      <ul role="group"
          class="c3"
      >
        <li role="option"
            class="c4"
        >
          <div value="5"
               data-key="5"
               tabindex="-1"
               class="c5"
          >
            Menu 5
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="6"
               data-key="6"
               tabindex="-1"
               class="c5"
          >
            Menu 6
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="7"
               data-key="7"
               tabindex="-1"
               class="c5"
          >
            Menu 7
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="8"
               data-key="8"
               tabindex="-1"
               class="c5"
          >
            Menu 8
          </div>
        </li>
        <li role="option"
            class="c4"
        >
          <div value="9"
               data-key="9"
               tabindex="-1"
               class="c5"
          >
            Menu 9
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
